--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "iso7816-tlv"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Julien Kowalski <julien.kowalski@ercom.fr>"]
 edition = "2018"
 license = "ISC"
@@ -8,6 +8,7 @@ repository = "https://github.com/jkowalsk/iso7816-tlv"
 description = "tools and utilities for handling TLV data as defined in ISO/IEC 7816-4"
 keywords = ["smartcard", "iso7816", "tlv"]
 categories = ["data-structures"]
+readme = "Readme.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
