--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,10 +3,14 @@ name: Rust
 on: [push]
 
 jobs:
-  build:
-
+  checks:
     runs-on: ubuntu-latest
-
+    steps:
+    - uses: actions/checkout@v1
+    - name: Clippy checks
+      run: cargo clippy 
+  build:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Build
