--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Clippy checks
-      run: cargo clippy 
+      run:  cargo clean && cargo clippy -- -Dwarnings 
   build:
     runs-on: ubuntu-latest
     steps:
