--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "iso7816-tlv"
-version = "0.2.1"
+version = "0.3.0"
 authors = ["Julien Kowalski <julien.kowalski@ercom.fr>"]
 edition = "2018"
 license = "ISC"
@@ -14,3 +14,6 @@ readme = "Readme.md"
 
 [dependencies]
 untrusted = "0.7.0"
+
+[dev-dependencies]
+rand = "0.7"
