--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,14 @@ keywords = ["smartcard", "iso7816", "tlv", "no_std"]
 categories = ["data-structures"]
 readme = "Readme.md"
 
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+
 
 [dependencies]
 untrusted = "0.7.0"
 
 [dev-dependencies]
 rand = "0.7"
+wee_alloc = "0.4.5"
