--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "iso7816-tlv"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Julien Kowalski <julien.kowalski@ercom.fr>"]
 edition = "2018"
 license = "ISC"
 repository = "https://github.com/jkowalsk/iso7816-tlv"
 description = "tools and utilities for handling TLV data as defined in ISO/IEC 7816-4"
-keywords = ["smartcard", "iso7816", "tlv"]
+keywords = ["smartcard", "iso7816", "tlv", "no_std"]
 categories = ["data-structures"]
 readme = "Readme.md"
 
