--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ readme = "Readme.md"
 untrusted = "0.7.0"
 
 [dev-dependencies]
-rand = "0.7"
-wee_alloc = "0.4.5"
+static-alloc = "0.2.1"
+rand_core = "0.5.1"
+rand_xorshift = "0.2"
