--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -1,9 +1,10 @@
-name: clippy
+name: Static Analysis
 
 on: [push]
 
 jobs:
   checks:
+    name: Static Analysis with Clippy
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
